--- a/characters.html
+++ b/characters.html
@@ -155,7 +155,7 @@
                         <hr>
                         <p class="text-muted mb-0">
                             <i class="bi bi-quote me-2"></i>
-                            <strong>The Content Submitter:</strong> A testing user who creates proposals and content for moderation. Since moderators cannot moderate their own proposals, Herner serves the essential function of submitting content that can be reviewed by moderators like Kanley Stubrick, enabling thorough testing of moderation workflows.
+                            <strong>The Content Submitter:</strong> A testing user who creates proposals and content for moderation, submits proposals
                         </p>
                     </div>
                     <div class="card-footer bg-light">
@@ -272,6 +272,43 @@
                 </div>
             </div>
             
+            <!-- Apple User -->
+            <div class="col-lg-6 col-md-6 mb-4">
+                <div class="card h-100 border-left-dark">
+                    <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center">
+                        <h5 class="mb-0">Apple User</h5>
+                        <span class="badge bg-dark">Typical Film Enthusiast</span>
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-4 text-center mb-3 mb-md-0">
+                                <img src="https://randomuser.me/api/portraits/men/35.jpg" alt="Apple User" class="img-fluid rounded-circle mb-2" style="width: 130px; height: 130px; object-fit: cover;">
+                                <div>
+                                    <span class="badge bg-secondary">Film Enthusiast</span>
+                                </div>
+                            </div>
+                            <div class="col-md-8">
+                                <p><strong>Phone:</strong> 604-555-4567 (iPhone)</p>
+                                <p><strong>Email:</strong> film.enthusiast@icloud.com</p>
+                                <p><strong>Auth:</strong> Apple ID (2FA disabled)</p>
+                                <p><strong>Internal Balance:</strong> 57.00</p>
+                                <p><strong>External Balance:</strong> 0</p>
+                                <p><strong>Reputation:</strong> 125</p>
+                                <p><strong>NFT:</strong> <span class="text-muted">0</span></p>
+                            </div>
+                        </div>
+                        <hr>
+                        <p class="text-muted mb-0">
+                            <i class="bi bi-quote me-2"></i>
+                            <strong>The Typical Film Enthusiast:</strong> A regular platform user who rates films, participates in quizzes, submits creative queries, and engages in Discord discussions. Represents the mainstream DCP user base with moderate activity and reputation but no NFT collecting or external wallet holdings.
+                        </p>
+                    </div>
+                    <div class="card-footer bg-light">
+                        <a href="character-detail-apple.html" class="btn btn-dark w-100">View Profile</a>
+                    </div>
+                </div>
+            </div>
+            
             <!-- New User -->
             <div class="col-lg-6 col-md-6 mb-4">
                 <div class="card h-100 border-left-danger">
@@ -356,7 +393,16 @@
                                         <td>Keep platform decentralized and secure</td>
                                     </tr>
                                     <tr>
-                                                                                <td><strong>Sandra Blockchain</strong></td>                                        <td>TALNT Net Holder</td>                                        <td>Holds tokens across wallets and contracts, owns NFTs</td>                                        <td>Token investment and blockchain participation</td>
+                                        <td><strong>Sandra Blockchain</strong></td>
+                                        <td>TALNT Net Holder</td>
+                                        <td>Holds tokens across wallets and contracts, owns NFTs</td>
+                                        <td>Token investment and blockchain participation</td>
+                                    </tr>
+                                    <tr>
+                                        <td><strong>Apple User</strong></td>
+                                        <td>Film Enthusiast</td>
+                                        <td>Rates films, participates in quizzes, submits creative queries, Discord engagement</td>
+                                        <td>Mainstream platform participation and community engagement</td>
                                     </tr>
                                     <tr>
                                         <td><strong>New User</strong></td>
