--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                                     <td><span class="badge bg-secondary">Typical Film Enthusiast</span></td>
                                     <td><span class="badge bg-dark">Apple ID</span></td>
                                     <td><span class="text-muted">-</span></td>
-                                    <td><a href="https://www.loom.com/share/02a5b9e74499476282ab57cb6a0919b0?sid=38b47c6b-1808-4ff4-bf53-55d4fb3b6a85" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey (Loom)</a></td>
+                                    <td><button class="btn btn-sm btn-outline-secondary"><i class="bi bi-arrow-up me-1"></i>Journey as with Twitter</button></td>
                                     <td><span class="text-danger">No</span></td>
                                     <td><span class="badge bg-success">Complete</span></td>
                                 </tr>
