assign browsers and wallets

--- a/index.html
+++ b/index.html
@@ -237,6 +237,8 @@
                                     <th>Account Name</th>
                                     <th>User Role</th>
                                     <th>Authentication</th>
+                                    <th>Browser</th>
+                                    <th>Wallet</th>
                                     <th>Delegation</th>
                                     <th>User Experience Video</th>
                                     <th>Moderator</th>
@@ -248,6 +250,8 @@
                                     <td>Kanley Stubrick</td>
                                     <td><span class="badge bg-primary">Experienced Frequent User</span></td>
                                     <td><span class="badge bg-info">Google Auth</span></td>
+                                    <td><span class="badge bg-primary">Chrome</span></td>
+                                    <td><span class="text-muted">-</span></td>
                                     <td><span class="text-muted">-</span></td>
                                     <td><a href="https://www.loom.com/share/90f42fba272f4d12ab3e26376abe6b97?sid=d795b7b3-202f-48d0-a9a9-34a5af5bb3e0" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey (Loom)</a></td>
                                     <td><span class="text-success">Yes</span></td>
@@ -257,6 +261,8 @@
                                     <td>Herner werzog</td>
                                     <td><span class="badge bg-warning text-dark">Casual User</span></td>
                                     <td><span class="badge bg-info">Google Auth</span></td>
+                                    <td><span class="badge bg-warning text-dark">Brave</span></td>
+                                    <td><span class="text-muted">-</span></td>
                                     <td><span class="text-muted">-</span></td>
                                     <td><a href="https://www.loom.com/share/fd34e3cd156a45ad9c8df6ca7eb73381?sid=8b5263f5-89e9-45b3-9b81-6a09d92bded1" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey (Loom)</a></td>
                                     <td><span class="text-danger">No</span></td>
@@ -266,6 +272,8 @@
                                     <td>TwitterProd</td>
                                     <td><span class="badge bg-info">Social Media User</span></td>
                                     <td><span class="badge bg-primary">X (Twitter)</span></td>
+                                    <td><span class="badge bg-primary">Chrome</span></td>
+                                    <td><span class="text-muted">-</span></td>
                                     <td><span class="text-muted">-</span></td>
                                     <td><a href="https://www.loom.com/share/9780099755de4dc693423186c07da257?sid=0dbfc3ca-e3cc-4a27-abc2-433342a77475" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey (Loom)</a></td>
                                     <td><span class="text-danger">No</span></td>
@@ -275,6 +283,8 @@
                                     <td>Keith Fellini</td>
                                     <td><span class="badge bg-success">Baker / Validator</span></td>
                                     <td><span class="badge bg-success">Sentinel Wallet</span></td>
+                                    <td><span class="badge bg-info">Microsoft Edge</span></td>
+                                    <td><span class="badge bg-primary">Coinbase Wallet</span></td>
                                     <td><span class="badge bg-info">Receives delegations</span></td>
                                     <td><a href="https://www.loom.com/share/29c08830bdea42e4b55eaa462857cda1?sid=f5b09d4a-6a7a-4436-9e13-927dc3e53d11" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey (Loom)</a></td>
                                     <td><span class="text-danger">No</span></td>
@@ -284,6 +294,8 @@
                                     <td>Sandra Blockchain</td>
                                     <td><span class="badge bg-warning text-dark">T4L3NT Mainnet Hodler</span></td>
                                     <td><span class="badge bg-warning">Ledger Nano S</span><br><small class="text-muted">+ Temple Wallet</small></td>
+                                    <td><span class="badge bg-primary">Chrome</span></td>
+                                    <td><span class="badge bg-info">MetaMask</span></td>
                                     <td><span class="badge bg-success">FILM → Keith Fellini</span><br><small class="text-muted">T4L3NT Mainnet</small></td>
                                     <td><a href="https://www.loom.com/share/ce7f04b1a2bd4960a88026a9aac81f26?sid=74158e59-e9a1-4a88-8719-f9286f55da16" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey (Loom)</a></td>
                                     <td><span class="text-danger">No</span></td>
@@ -293,6 +305,8 @@
                                     <td>Apple User</td>
                                     <td><span class="badge bg-secondary">Typical Film Enthusiast</span></td>
                                     <td><span class="badge bg-dark">Apple ID</span></td>
+                                    <td><span class="badge bg-secondary">Safari</span></td>
+                                    <td><span class="text-muted">-</span></td>
                                     <td><span class="text-muted">-</span></td>
                                     <td><button class="btn btn-sm btn-outline-secondary"><i class="bi bi-arrow-up me-1"></i>Journey as with Twitter</button></td>
                                     <td><span class="text-danger">No</span></td>
@@ -302,6 +316,8 @@
                                     <td>New User</td>
                                     <td><span class="badge bg-dark">First-time User</span></td>
                                     <td><span class="badge bg-dark">None</span></td>
+                                    <td><span class="badge bg-danger">Firefox</span></td>
+                                    <td><span class="text-muted">-</span></td>
                                     <td><span class="text-muted">-</span></td>
                                     <td><a href="https://www.loom.com/share/534d0dd66709460db0463b21fc1c3d04?sid=ac302cfe-19fc-4237-9ce6-ff7e7c800417" class="btn btn-sm btn-outline-primary" target="_blank"><i class="bi bi-play-circle me-1"></i>View Journey (Loom)</a></td>
                                     <td><span class="text-danger">No</span></td>
