--- a/characters.html
+++ b/characters.html
@@ -110,6 +110,8 @@
                                 <p><strong>Phone:</strong> 604-615-9138 (Rogers)</p>
                                 <p><strong>Email:</strong> michaelkernaghan@ecadlabs.com</p>
                                 <p><strong>Auth:</strong> Google Auth (2FA disabled)</p>
+                                <p><strong>Browser:</strong> <span class="badge bg-primary">Chrome</span></p>
+                                <p><strong>Wallet:</strong> <span class="text-muted">-</span></p>
                                 <p><strong>Internal Balance:</strong> 684.61</p>
                                 <p><strong>External Balance:</strong> 55.88</p>
                                 <p><strong>Reputation:</strong> 40.4</p>
@@ -147,6 +149,8 @@
                                 <p><strong>Phone:</strong> 778-949-2186 (TextNow)</p>
                                 <p><strong>Email:</strong> michael.kernaghan@gmail.com</p>
                                 <p><strong>Auth:</strong> Google Auth (2FA enabled)</p>
+                                <p><strong>Browser:</strong> <span class="badge bg-warning text-dark">Brave</span></p>
+                                <p><strong>Wallet:</strong> <span class="text-muted">-</span></p>
                                 <p><strong>Internal Balance:</strong> 6.06</p>
                                 <p><strong>External Balance:</strong> 0.98</p>
                                 <p><strong>Reputation:</strong> 0</p>
@@ -183,6 +187,8 @@
                                 <p><strong>Handle:</strong> @standardtesting</p>
                                 <p><strong>Email:</strong> <span class="text-danger">Missing - Bug Filed</span></p>
                                 <p><strong>Auth:</strong> X Sign-in (2FA disabled)</p>
+                                <p><strong>Browser:</strong> <span class="badge bg-primary">Chrome</span></p>
+                                <p><strong>Wallet:</strong> <span class="text-muted">-</span></p>
                                 <p><strong>Internal Balance:</strong> 0</p>
                                 <p><strong>External Balance:</strong> 2.39</p>
                                 <p><strong>Reputation:</strong> 0</p>
@@ -219,6 +225,8 @@
                                 <p><strong>Phone:</strong> 236-869-9903 (Sentinel Wallet)</p>
                                 <p><strong>Email:</strong> abbotsfordcroquet@gmail.com</p>
                                 <p><strong>Auth:</strong> Sentinel Wallet (2FA mixed)</p>
+                                <p><strong>Browser:</strong> <span class="badge bg-info">Microsoft Edge</span></p>
+                                <p><strong>Wallet:</strong> <span class="badge bg-primary">Coinbase Wallet</span></p>
                                 <p><strong>Internal Balance:</strong> 194.9</p>
                                 <p><strong>External Balance:</strong> 3080.69</p>
                                 <p><strong>Reputation:</strong> 0</p>
@@ -255,7 +263,10 @@
                                 <p><strong>Phone:</strong> 778-555-2134 (VOIP)</p>
                                 <p><strong>Email:</strong> sandra.blockchain@filmcredits.io</p>
                                 <p><strong>Auth:</strong> Sentinel Wallet (Ledger Nano S)</p>
-                                                                <p><strong>Internal Balance:</strong> 5</p>                                <p><strong>External Balance:</strong> 184.976081 ꜩ</p>
+                                <p><strong>Browser:</strong> <span class="badge bg-primary">Chrome</span></p>
+                                <p><strong>Wallet:</strong> <span class="badge bg-info">MetaMask</span></p>
+                                <p><strong>Internal Balance:</strong> 5</p>
+                                <p><strong>External Balance:</strong> 184.976081 ꜩ</p>
                                 <p><strong>Reputation:</strong> 0</p>
                                 <p><strong>NFT:</strong> <span class="text-success">3</span> <i class="bi bi-images text-success"></i></p>
                             </div>
@@ -291,6 +302,8 @@
                                 <p><strong>Phone:</strong> 604-555-4567 (iPhone)</p>
                                 <p><strong>Email:</strong> film.enthusiast@icloud.com</p>
                                 <p><strong>Auth:</strong> Apple ID (2FA disabled)</p>
+                                <p><strong>Browser:</strong> <span class="badge bg-secondary">Safari</span></p>
+                                <p><strong>Wallet:</strong> <span class="text-muted">-</span></p>
                                 <p><strong>Internal Balance:</strong> 57.00</p>
                                 <p><strong>External Balance:</strong> 0</p>
                                 <p><strong>Reputation:</strong> 125</p>
@@ -328,6 +341,8 @@
                                 <p><strong>Phone:</strong> 604-555-9876 (iPhone)</p>
                                 <p><strong>Email:</strong> newuser@example.com</p>
                                 <p><strong>Auth:</strong> None yet</p>
+                                <p><strong>Browser:</strong> <span class="badge bg-danger">Firefox</span></p>
+                                <p><strong>Wallet:</strong> <span class="text-muted">-</span></p>
                                 <p><strong>Internal Balance:</strong> 0</p>
                                 <p><strong>External Balance:</strong> 0</p>
                                 <p><strong>Reputation:</strong> 0</p>
