modify the herner werzog role

--- a/characters.html
+++ b/characters.html
@@ -135,14 +135,14 @@
                 <div class="card h-100 border-left-secondary">
                     <div class="card-header bg-secondary text-white d-flex justify-content-between align-items-center">
                         <h5 class="mb-0">Herner Werzog</h5>
-                        <span class="badge bg-secondary">Second Prod User</span>
+                        <span class="badge bg-danger">Whitehat Tester</span>
                     </div>
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-4 text-center mb-3 mb-md-0">
                                 <img src="herner.webp" alt="Herner Werzog" class="img-fluid rounded-circle mb-2" style="width: 130px; height: 130px; object-fit: cover;">
                                 <div>
-                                    <span class="badge bg-warning text-dark">Submitter</span>
+                                    <span class="badge bg-danger">Security Researcher</span>
                                 </div>
                             </div>
                             <div class="col-md-8">
@@ -159,7 +159,7 @@
                         <hr>
                         <p class="text-muted mb-0">
                             <i class="bi bi-quote me-2"></i>
-                            <strong>The Content Submitter:</strong> A testing user who creates proposals and content for moderation, submits proposals
+                            <strong>The Whitehat Tester:</strong> A security-focused user who actively tests edge cases and error handling scenarios. Herner systematically attempts to break features, reports bugs on Discord, and helps identify potential security vulnerabilities. His low wallet balances and zero reputation reflect his focus on testing rather than platform usage, making him crucial for ensuring robust error handling and security during migration.
                         </p>
                     </div>
                     <div class="card-footer bg-light">
@@ -391,9 +391,9 @@
                                     </tr>
                                     <tr>
                                         <td><strong>Herner Werzog</strong></td>
-                                        <td>Submitter</td>
-                                        <td>Creates content for moderation, submits proposals</td>
-                                        <td>Test moderation workflows, provide content to moderate</td>
+                                        <td>Whitehat Tester</td>
+                                        <td>Tests edge cases, reports bugs, validates error handling</td>
+                                        <td>Improve platform security and reliability</td>
                                     </tr>
                                     <tr>
                                         <td><strong>TwitterProd</strong></td>
