--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                                 </tr>
                                 <tr id="account-herner">
                                     <td>Herner werzog</td>
-                                    <td><span class="badge bg-warning text-dark">Casual User</span></td>
+                                    <td><span class="badge bg-danger">Whitehat Tester</span></td>
                                     <td><span class="badge bg-info">Google Auth</span></td>
                                     <td><span class="badge bg-warning text-dark">Brave</span></td>
                                     <td><span class="text-muted">-</span></td>
