--- a/characters.html
+++ b/characters.html
@@ -70,6 +70,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="characters.html">Characters</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="gherkin-scenarios.html">Test Scenarios</a>
+                    </li>
                 </ul>
             </div>
         </div>
