--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="user-guide-analysis.html">User Guide Analysis</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="gherkin-scenarios.html">Test Scenarios</a>
+                    </li>
                 </ul>
             </div>
         </div>
